# issue_qt_restore_state_orientation

./: CMakeLists.txt  README.md  main.cpp  qt_restore_state_orientation.cpp  qt_restore_state_orientation.h  qt_restore_state_orientation.py
